# kbooks

./: .gitignore  Cargo.toml  Makefile  README.md  container.nix  default.nix  derivation.nix  diesel-khnum.toml  module.nix  shell.nix
docs/: architecture.md  howto.md  inspiration.md  journal.md  test.sh  todo.md
kbooks-api/: Cargo.toml
kbooks-api/src/: main.rs
kbooks-api/src/controllers/: book.rs
kbooks-api/src/khnum/: errors.rs
kbooks-api/src/khnum/users/: utils.rs
kbooks-api/src/khnum/users/controllers/: auth.rs  forgotten.rs  register.rs
kbooks-api/src/khnum/users/controllers/auth/: tests.rs
kbooks-api/src/khnum/users/controllers/forgotten/: tests.rs
kbooks-api/src/khnum/users/controllers/register/: tests.rs
kbooks-cli/: Cargo.toml
kbooks-cli/src/: main.rs  user.rs
kbooks-common/: Cargo.toml
kbooks-common/src/: lib.rs  models.rs
kbooks-common/src/khnum/: errors.rs  wiring.rs
kbooks-common/src/khnum/users/: mod.rs  operations.rs
kbooks-common/src/khnum/users/repository/: auth_handler.rs  user_handler.rs
kbooks-common/src/repository/: book_handler.rs
po/khnum/: khnum.pot
src/: main.rs  models.rs
src/controllers/: book.rs
src/khnum/: errors.rs
src/khnum/users/controllers/: auth.rs  forgotten.rs  register.rs
src/khnum/users/controllers/auth/: tests.rs
src/khnum/users/controllers/forgotten/: tests.rs
src/khnum/users/controllers/register/: tests.rs
src/khnum/users/repository/: auth_handler.rs
src/repository/: book_handler.rs
