[package]
name = "khnum"
version = "0.1.1"
authors = ["mmai <henri@bourcereau.fr>"]
edition = "2018"

[dependencies]
actix = { version = "0.8.3", features = ["http"] }
actix-http = "1.0.0-alpha.3"
actix-http-test = "1.0.0-alpha.3"
actix-rt = "1.0.0-alpha.3"
actix-web = "2.0.0-alpha.3"
actix-files = "0.2.0-alpha.3"
actix-session = "0.3.0-alpha.3"
actix-identity = "0.2.0-alpha.1"
# actix-utils = "1.0.0-alpha.3" # for async body responses with mspc ? cf examples/basic
# actix-threadpool = "0.3.0"

jsonwebtoken = "7.0.0-alpha.2"
lettre = "0.9.2"
lettre_email = "0.9.2"
percent-encoding = "2.1.0"
url = "2.1.0"

diesel = { version = "1.4.3", features = ["postgres", "sqlite", "uuid", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.7"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

dotenv = "0.15.0"
env_logger = "0.7.1"

derive_more = "0.99.2"
serde= "1.0.103"
serde_derive= "1.0.103"
serde_json= "1.0.44"

awc = "0.2.8"
bcrypt = "0.6.1"
chrono = { version = "0.4.10", features = ["serde"] }
futures = "0.3.1"
lazy_static = "1.4.0"
num_cpus = "1.11.1"
regex = "1.3.1"

gettext = { git = "https://github.com/Plume-org/gettext/", rev = "294c54d74c699fbc66502b480a37cc66c1daa7f3" }
gettext-macros = { git = "https://github.com/Plume-org/gettext-macros/", rev = "a7c605f7edd6bfbfbfe7778026bfefd88d82db10" }
gettext-utils = { git = "https://github.com/Plume-org/gettext-macros/", rev = "a7c605f7edd6bfbfbfe7778026bfefd88d82db10" }

[dependencies.actix_i18n]
version = "0.6"
# git = "https://github.com/mmai/actix_i18n"
path = "../actix_i18n"
branch = "actix-2.0"

[features]
default = ["postgres"]
postgres = ["diesel/postgres"]
test = ["diesel/sqlite"]
debug-mailer = []
